<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>xio-core</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            --enable-preview
          </compilerArgs>
          <source>21</source>
          <target>21</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-preview</argLine>
          <excludes>
            <exclude>**/*TestShould.java</exclude>
          </excludes>
          <forkCount>1</forkCount>
          <includes>
            <include>**/*Must.java</include>
            <include>**/*Test.java</include>
            <include>**/*TestMust.java</include>
            <include>**/*Test*.java</include>
          </includes>
          <parallelOptimized>false</parallelOptimized>
          <reuseForks>false</reuseForks>
          <threadCount>1</threadCount>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.0.0-M7</version>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testResources>
      <testResource>
        <directory>src/main/resources</directory>
      </testResource>
    </testResources>
    <testSourceDirectory>src/test/java</testSourceDirectory>
  </build>
  <dependencies>
    <dependency>
      <artifactId>hamcrest-all</artifactId>
      <groupId>org.hamcrest</groupId>
      <scope>test</scope>
      <version>1.3</version>
    </dependency>
    <dependency>
      <artifactId>junit</artifactId>
      <groupId>junit</groupId>
      <scope>test</scope>
      <version>4.13.2</version>
    </dependency>
    <dependency>
      <artifactId>jackson-core</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <scope>test</scope>
      <version>2.9.9</version>
    </dependency>
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <scope>test</scope>
      <version>2.9.9</version>
    </dependency>
    <dependency>
      <artifactId>jackson-annotations</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <scope>test</scope>
      <version>2.9.9</version>
    </dependency>


  </dependencies>
  <groupId>xio</groupId>
  <modelVersion>4.0.0</modelVersion>
  <packaging>jar</packaging>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <version>0.3-SNAPSHOT</version>
</project>
